# cognitive-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  package-lock.json  package.json
rust/: Cargo.toml  README.md
rust/src/: crypto.rs  custody.rs  error.rs  keys.rs  lib.rs  main.rs  pseudonym.rs  store.rs  tpm.rs
src/: db.ts  format.ts  index.ts
test/: smoke.mjs
